@@ -61,8 +61,8 @@ if(NOT Python_Interpreter_FOUND)
         set(USE_MATCHCOMPILER_OPT "Off")
     endif()
 else()
-    if(${Python_VERSION} VERSION_LESS 3.6)
-        message(FATAL_ERROR "The minimum supported Python version is 3.6 - found ${Python_VERSION}")
+    if(${Python_VERSION} VERSION_LESS 3.7)
+        message(FATAL_ERROR "The minimum supported Python version is 3.7 - found ${Python_VERSION}")
     endif()
 endif()
 
